add controller and integration tests
